--- a/cartuchos/src/app/players/players.component.html
+++ b/cartuchos/src/app/players/players.component.html
@@ -1,24 +1,9 @@
 <h3>JUGADORES</h3>
+
 <ul class="players">
   <li *ngFor="let player of players" [class.selected]="player === selectedPlayer" (click)="onSelect(player)">
     <span class="badge">{{player?.id}}</span> <span>{{player?.nickName}}</span>
   </li>
 </ul>
-<h3>{{selectedPlayer.name | uppercase}}</h3>
-<div><span>Id: </span>{{selectedPlayer?.id}}</div>
-<div *ngIf="!onEditMode;else editFields">
-  <div><span>Nombre: </span>{{selectedPlayer?.name}}</div>
-  <div><span>Apodo: </span>{{selectedPlayer?.nickName}}</div>
-</div>
 
-<label><input class="btn-primary" type="button" value="Editar" *ngIf="!onEditMode" (click)="edit(selectedPlayer)"></label>
-<div><button class="btn-primary" type="button" *ngIf="onEditMode" (click)="edit(selectedPlayer)">Guardar</button></div>
-
-<ng-template #editFields>
-  <label>
-    Nombre: <input [(ngModel)]="selectedPlayer.name" placeholder="Nombre">
-  </label><br>
-  <label>
-    Apodo: <input [(ngModel)]="selectedPlayer.nickName" placeholder="Apodo">
-  </label>
-</ng-template>
+<app-player-detail [player]="selectedPlayer"></app-player-detail>
