--- a/cartuchos/src/app/app.component.html
+++ b/cartuchos/src/app/app.component.html
@@ -1,4 +1,17 @@
 <h1> {{ title }} </h1>
-<app-players></app-players>
-<app-messages></app-messages>
-<app-formations></app-formations>
+
+<table>
+    <tr>
+        <td>
+            <app-players (sendPlayers)="getSelectedPlayer($event)"></app-players>
+        </td>
+        <td> . </td>
+        <td>
+            <app-players-confirmed [confirmedPlayers]="playerSelected"></app-players-confirmed>
+        </td>
+        <td> . </td>
+        <td>
+            <app-formations></app-formations>
+        </td>
+    </tr>
+</table>
