--- a/cartuchos/src/app/players-confirmed/players-confirmed.component.html
+++ b/cartuchos/src/app/players-confirmed/players-confirmed.component.html
@@ -2,8 +2,11 @@
 
 <tr>
   <ol class="players">
-    <li *ngFor="let player of confirmedPlayers" [class.selected]="player === selectedPlayer" (click)="onSelect(player)">
-      <div><span class="badge">{{player?.id}}</span> <span class="badge-secondary"><input class="input" type="checkbox" name={{player?.id}} value={{player?.id}}></span> <span>{{player?.nickName}}</span></div>
+    <li *ngFor="let player of confirmedPlayers">
+      <div>
+        <span class="badge">{{player?.id}}</span>
+        <span>{{player?.nickName}}</span>
+      </div>
     </li>
   </ol>
 </tr>
