--- a/cartuchos/src/app/players/players.component.css
+++ b/cartuchos/src/app/players/players.component.css
@@ -1,66 +1,72 @@
 /* PlayersComponent's private CSS styles */
 .selected {
-    background-color: rgb(230, 211, 172) !important;
-    color: #607D8B;
-  }
-  .players {
-    margin: 0 0 2em 0;
-    list-style-type: none;
-    padding: 0;
-    width: 15em;
-  }
-  .players li {
-    cursor: pointer;
-    position: relative;
-    left: 0;
-    background-color: #EEE;
-    margin: .5em;
-    padding: .3em 0;
-    height: 2em;
-    border-radius: 4px;
-  }
-  .players li.selected:hover {
-    background-color: #ecb47f !important;
-    color: #607D8B;
-  }
-  .players li:hover {
-    color: #607D8B;
-    background-color: #DDD;
-    left: .1em;
-  }
-  .players .text {
-    position: relative;
-    top: -3px;
-  }
-  .players .badge {
-    display: inline-block;
-    font-size: small;
-    color: white;
-    padding: 0.8em 0.7em 0 0.7em;
-    background-color: #607D8B;
-    line-height: 1em;
-    position: relative;
-    left: 2px;
-    top: -6px;
-    height: 2.5em;
-    margin-right: .8em;
-    border-radius: 4px 0 0 4px;
-  }
-  .players .badge-secondary {
-    display: inline-block;
-    font-size: small;
-    color: white;
-    padding: 0.8em 0.7em 0 0.7em;
-    background-color: #607D8B;
-    line-height: 1em;
-    position: absolute;
-    left: 200px;
-    top: 0px;
-    height: 2.5em;
-    margin-left: .8em;
-    border-radius: 0 4px 4px 0;
-  }
-  .players .input[type=checkbox]
-  {
-    transform: scale(1.5);
-  }
+  background-color: #ecb47f !important;
+  color: #607D8B;
+}
+.confirmed {
+  background-color: #b6f3b0 !important;
+}
+.players {
+  margin: 0 0 2em 0;
+  list-style-type: none;
+  padding: 0;
+  width: 15em;
+}
+.players li {
+  cursor: pointer;
+  position: relative;
+  left: 0;
+  background-color: rgb(230, 211, 172);
+  margin: .5em;
+  padding: .3em 0;
+  height: 2em;
+  border-radius: 4px;
+}
+.players li.selected:hover {
+  background-color: #ecb47f !important;
+  color: #607D8B;
+}
+  .players li.confirmed:hover {
+  background-color: #7dcc76 !important;
+}
+.players li:hover {
+  color: #607D8B;
+  background-color: #ecb47f;
+  left: .1em;
+}
+.players .text {
+  position: relative;
+  top: -3px;
+}
+.players .badge {
+  display: inline-block;
+  font-size: small;
+  color: white;
+  padding: 0.8em 0.7em 0 0.7em;
+  background-color: #607D8B;
+  line-height: 1em;
+  position: relative;
+  left: 1px;
+  top: -6px;
+  height: 2.5em;
+  margin-right: .8em;
+  border-radius: 4px 0 0 4px;
+}
+.players .badge-secondary {
+  display: inline-block;
+  font-size: small;
+  color: white;
+  padding: 0.8em 0.7em 0 0.7em;
+  background-color: #607D8B;
+  line-height: 1em;
+  position: absolute;
+  left: 200px;
+  top: 0px;
+  height: 2.5em;
+  margin-left: .8em;
+  border-radius: 0 4px 4px 0;
+}
+.players .input[type=checkbox]
+{
+  transform: scale(1.5);
+}
