--- a/cartuchos/src/app/app.component.html
+++ b/cartuchos/src/app/app.component.html
@@ -1,6 +1,6 @@
 <h1> {{ title }} </h1>
 
-<table>
+<!-- <table>
     <tr>
         <td>
             <app-players (sendPlayers)="onSendPlayers($event)"></app-players>
@@ -14,4 +14,6 @@
             <app-formations></app-formations>
         </td>
     </tr>
-</table>
+</table> -->
+
+<app-formation-detail></app-formation-detail>
