--- a/cartuchos/src/app/formation-detail/formation-detail.component.html
+++ b/cartuchos/src/app/formation-detail/formation-detail.component.html
@@ -1,3 +1,4 @@
-<p>
-  formation-detail works!
-</p>
+<canvas #myCanvas id="myCanvas" width="1000" height="500" style="border:1px solid #d3d3d3;"></canvas>
+<canvas #myCanvas2 id="myCanvas2" width="1000" height="500" style="border:1px solid #d3d3d3;"></canvas>
+
+
